# Nevereverland

./: Fall_murasaki_neverever.cpp  README.md  everything.txt
CMake_Lighting/: CMakeLists.txt
CMake_Lighting/Light_and_textures/: Fall_murasaki_neverever.cpp  GL_movement.h  laba4.cpp  readBMP.cpp  readBMP.h
freeglut_installed/include/GL/: freeglut_std.h
freeglut_installed/lib/: freeglut.lib  freeglut_static.lib
freeglut_installed/lib/pkgconfig/: freeglut.pc
project/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  Fall_murasaki_neverever.cpp  Lights_and_textures.sln  Lights_and_textures.vcxproj  Lights_and_textures.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  backup.txt  cmake_install.cmake  drinktionary.txt
project/Lights_and_textures.dir/Debug/Lights_a.3415EEBA.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lights_and_textures.lastbuildstate  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
project/Win32/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
project/additional_data/: Otchet_po_kursovoy_rabote.docx
project/lib/FTGL/lib/: ftgl_dynamic_MT.lib  ftgl_static_MT.lib  ftgl_static_MTD.lib  ftgl_static_MTD_d.lib
project/script/: ch0.txt  ch1.txt
